#!/usr/bin/env python3
"""
Implementation of the AI gRPC services
"""

import grpc
import numpy as np
from concurrent import futures
import time
import logging

# Import the generated gRPC modules
# TODO: Uncomment after generating the protobuf code
# import app.proto.ai_service_pb2 as ai_service_pb2
# import app.proto.ai_service_pb2_grpc as ai_service_pb2_grpc

# Configure logging
logging.basicConfig(level=logging.INFO)
logger = logging.getLogger(__name__)

# TODO: Uncomment after generating the protobuf code
# class VectorServiceServicer(ai_service_pb2_grpc.VectorServiceServicer):
class VectorServiceServicer:
    """Implementation of the VectorService"""
    
    def HealthCheck(self, request, context):
        """Check the health of the vector service"""
        # TODO: Implement after generating the protobuf code
        # return ai_service_pb2.HealthCheckResponse(status="OK", message="Vector service is running")
        logger.info("Health check received for vector service")
        return {"status": "OK", "message": "Vector service is running"}
    
    def CreateEmbedding(self, request, context):
        """Create an embedding for the given text"""
        # TODO: Implement after generating the protobuf code
        # text = request.text
        
        # For now, generate a random embedding of size 768
        # embedding = np.random.rand(768).astype(np.float32)
        
        # return ai_service_pb2.CreateEmbeddingResponse(embedding=embedding)
        
        # Placeholder implementation
        logger.info(f"Create embedding request received for text: {request.get('text', 'N/A')}")
        embedding = np.random.rand(768).astype(np.float32)
        return {"embedding": embedding}

# TODO: Uncomment after generating the protobuf code
# class ModelServiceServicer(ai_service_pb2_grpc.ModelServiceServicer):
class ModelServiceServicer:
    """Implementation of the ModelService"""
    
    def HealthCheck(self, request, context):
        """Check the health of the model service"""
        # TODO: Implement after generating the protobuf code
        # return ai_service_pb2.HealthCheckResponse(status="OK", message="Model service is running")
        logger.info("Health check received for model service")
        return {"status": "OK", "message": "Model service is running"}
    
    def GenerateText(self, request, context):
        """Generate text based on the given prompt"""
        # TODO: Implement after generating the protobuf code
        # prompt = request.prompt
        
        # For now, generate a simple response
        # response_text = f"This is a generated response to: {prompt}"
        
        # return ai_service_pb2.GenerateTextResponse(text=response_text)
        
        # Placeholder implementation
        logger.info(f"Generate text request received for prompt: {request.get('prompt', 'N/A')}")
        prompt = request.get('prompt', 'No prompt provided')
        response_text = f"This is a generated response to: {prompt}"
        return {"text": response_text}

def serve():
    """Start the gRPC server"""
    # Create a gRPC server
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    
    # TODO: Add services after generating the protobuf code
    # ai_service_pb2_grpc.add_VectorServiceServicer_to_server(VectorServiceServicer(), server)
    # ai_service_pb2_grpc.add_ModelServiceServicer_to_server(ModelServiceServicer(), server)
    
    # For now, just log that we would add the services
    logger.info("Would add VectorService and ModelService to the gRPC server")
    
    # Bind the server to the port 50051 for vector service
    vector_port = '[::]:50051'
    server.add_insecure_port(vector_port)
    logger.info(f"Vector service starting on port {vector_port}")
    
    # Start the server
    server.start()
    logger.info("gRPC server started")
    
    try:
        while True:
            time.sleep(86400)  # One day
    except KeyboardInterrupt:
        server.stop(0)

def serve_vector_service():
    """Start the vector service on port 50051"""
    # Create a gRPC server
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    
    # TODO: Add vector service after generating the protobuf code
    # ai_service_pb2_grpc.add_VectorServiceServicer_to_server(VectorServiceServicer(), server)
    
    # For now, just log that we would add the service
    logger.info("Would add VectorService to the gRPC server")
    
    # Bind the server to the port 50051
    vector_port = '[::]:50051'
    server.add_insecure_port(vector_port)
    logger.info(f"Vector service starting on port {vector_port}")
    
    # Start the server
    server.start()
    logger.info("Vector service started")
    
    try:
        while True:
            time.sleep(86400)  # One day
    except KeyboardInterrupt:
        server.stop(0)

def serve_model_service():
    """Start the model service on port 50052"""
    # Create a gRPC server
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    
    # TODO: Add model service after generating the protobuf code
    # ai_service_pb2_grpc.add_ModelServiceServicer_to_server(ModelServiceServicer(), server)
    
    # For now, just log that we would add the service
    logger.info("Would add ModelService to the gRPC server")
    
    # Bind the server to the port 50052
    model_port = '[::]:50052'
    server.add_insecure_port(model_port)
    logger.info(f"Model service starting on port {model_port}")
    
    # Start the server
    server.start()
    logger.info("Model service started")
    
    try:
        while True:
            time.sleep(86400)  # One day
    except KeyboardInterrupt:
        server.stop(0)

if __name__ == '__main__':
    import sys
    
    if len(sys.argv) > 1:
        service_type = sys.argv[1]
        if service_type == "vector":
            serve_vector_service()
        elif service_type == "model":
            serve_model_service()
        else:
            print(f"Unknown service type: {service_type}")
            print("Usage: python grpc_services.py [vector|model]")
    else:
        print("Please specify a service type: vector or model")
        print("Usage: python grpc_services.py [vector|model]")